# LinuxDevelopment

./: .gitmodules  README.md  setup_env.sh
BBxM/LDD/: README  led.c
Common/Books/Writing-Linux-Device-Drivers/LDD_SOLUTIONS_2011_03_24/: genmake
Common/Examples/dbus-daemon/: dbus-daemon.c
Common/Examples/ipc-examples/msgQ/: README.md  msg_props.c  msg_receiver.c  msg_sender.c  remove_msg.sh
Common/Examples/ipc-examples/pipe/: README.md  email.c  http.c  pipe2.c  pipe3.c  pipe4.c  pipe5.c  popen1.c  popen2.c  popen2a.c  popen3.c
Common/Examples/ipc-examples/sem/: README.md  create.c  philos.c  remove_sem.sh  sem1.c  startup.c  workers.c
Common/Examples/lcd/: Changes  Makefile  README  Todo
Common/Examples/lcd-linux/: Changelog  INSTALL  Makefile
Common/Examples/lcd-linux/Documentation/: hd44780.txt  lcd-linux.txt  static_compilation.txt
Common/Examples/lcd-linux/examples/: display_date.sh  lcd-console.c  test_ioctl.c  test_read.c  test_write.c
Common/Examples/lcd-linux/lcd-linux/: 60-lcd-linux.rules  Config.in  Kconfig  Makefile-2.2  Makefile-2.4  Makefile-2.6  lcd-linux.c
Common/Examples/lcd-linux/lcdcon/: lcdcon.c
Common/Examples/lcd4linux/: Makefile.in  drv_Noritake.c  drv_generic_i2c.h  drv_generic_text.c  drv_serdisplib.c
Common/Examples/lcdmod/: Makefile  README  display_date  lcd_module.c
Common/Examples/sock-examples/: README.md  client1.c  client2.c  client3.c  cmdProcess.c  echo_server.c  server2.c  server3.c
Common/Examples/virtual-can/: README.md  vcan.c
Common/Libraries/IPC/intra2net/libasyncio/: AUTHORS  CMakeLists.txt  LICENSE  README  TODO  asyncio_config.hpp.in.cmake  ideas.txt  libasyncio.lnt  libasyncio.spec.in
Common/Libraries/IPC/intra2net/libasyncio/asyncio/: CMakeLists.txt  async_callout.cpp  async_callout.hpp  async_io.cpp  async_io.hpp  async_pipe.cpp  async_pipe.hpp  async_process.cpp  async_process.hpp  async_socket.cpp  async_socket.hpp  async_timer.cpp  async_timer.hpp  libasyncio.pc.in
Common/Libraries/IPC/intra2net/libasyncio/doc/: Doxyfile.in  index.doc
Common/Libraries/IPC/intra2net/libasyncio/glue_t2n/: CMakeLists.txt  asyncio_t2n.cpp  asyncio_t2n.hpp  libasyncio_t2n.pc.in
Common/Libraries/IPC/intra2net/libasyncio/templates/: cpp  hpp
Common/Libraries/IPC/intra2net/libasyncio/unittest/: CMakeLists.txt  test_simpleio_basics.cpp
Common/Libraries/IPC/intra2net/libasyncio/utils/: CMakeLists.txt  asyncio_containerfunc.hpp  asyncio_pointer_func.hpp  asyncio_ptr_list.hpp  asyncio_signalfunc.hpp  asyncio_system_tools.cpp  asyncio_system_tools.hpp  asyncio_time_tools.cpp  asyncio_time_tools.hpp  asyncio_utils.cpp  asyncio_utils.hpp  libasyncio_utils.pc.in
Common/Libraries/IPC/intra2net/libasyncio/utils/i2ncommon/: CMakeLists.txt  containerfunc.cpp  containerfunc.hpp  signalfunc.cpp  signalfunc.hpp
Common/Libraries/IPC/intra2net/libt2n/: AUTHORS  CMakeLists.txt  ChangeLog  README  config.h.in.cmake  libt2n-gccxml.sh  libt2n.pc.in  libt2n.spec.in
Common/Libraries/IPC/intra2net/libt2n/codegen/: CMakeLists.txt  Libt2n.cmake  README  TODO  clientlib.pc.in  codegen-stubhead.hxx  main.cpp
Common/Libraries/IPC/intra2net/libt2n/doc/: Doxyfile.in  index.doc
Common/Libraries/IPC/intra2net/libt2n/examples/: CMakeLists.txt  README  minimalistic-client-stub.cpp  minimalistic-client-stub.hxx  minimalistic-client.cpp  minimalistic-server-stub.cpp  minimalistic-server.cpp  minimalistic-stub-once.hxx  minimalistic-stub.hxx
Common/Libraries/IPC/intra2net/libt2n/examples-codegen/: CMakeLists.txt  README
Common/Libraries/IPC/intra2net/libt2n/examples-codegen/cmake/: CMakeLists.txt
Common/Libraries/IPC/intra2net/libt2n/examples-codegen/example1/: CMakeLists.txt  README  TODO  server.cpp  t2nexample.cpp  t2nexample.hxx
Common/Libraries/IPC/intra2net/libt2n/examples-codegen/example1-client/: CMakeLists.txt  client.cpp
Common/Libraries/IPC/intra2net/libt2n/examples-codegen/example1-client-wrapper/: CMakeLists.txt  README  client.cpp  configure.in
Common/Libraries/IPC/intra2net/libt2n/examples-codegen/example2/: CMakeLists.txt  README  client.cpp  default.cpp  default.hxx  foo.hxx  other-1.cpp  other-2.cpp  other.hxx  server.cpp  test
Common/Libraries/IPC/intra2net/libt2n/examples-codegen/example2-client/: CMakeLists.txt  README  client.cpp
Common/Libraries/IPC/intra2net/libt2n/src/: CMakeLists.txt  client.cpp  client.hxx  client_wrapper.cpp  client_wrapper.hxx  command.cpp  command.hxx  command_client.cpp  command_client.hxx  command_server.cpp  command_server.hxx  connection.cpp  connection.hxx  container.cpp  container.hxx  container.tcc  log.hxx  server.cpp  server.hxx  socket_client.cpp  socket_client.hxx  socket_handler.cpp  socket_handler.hxx  socket_server.cpp  socket_server.hxx  socket_wrapper.cpp  socket_wrapper.hxx  t2n_exception.cpp  t2n_exception.hxx  t2n_exception.tcc  types.hxx
Common/Libraries/IPC/intra2net/libt2n/templates/: cpp
Common/Libraries/IPC/intra2net/libt2n/test/: CMakeLists.txt  callback.cpp  cmdgroup.cpp  comm.cpp  getsocket.cpp  hello.cpp  newserver.cpp  reconnect.cpp  reentrant.cpp  serialize.cpp  simplecmd.cpp  test_fixtures.hxx  timeout.cpp  wrapper.cpp
RPi/LDD/: gpio-freq.tar.bz2
RPi/LDD/gpio-freq/: Makefile  README  gpio-freq.c
RPi/LDD/gpio_char_driver/: gpio_char_driver.c
RPi/LDD/gpio_int_driver/: Makefile  gpio_int_driver.c
RPi/LDD/led_matrix/: Makefile  led_matrix.c
RPi/LDD/pi_mini_uart/: Makefile  bcm_mini_uart.c
RPi/LDD/primitive-analog-driver/: analog2.c
RPi/LDD/rf/: tx433.c
RPi/LDD/rfrpi/: Makefile  RCSwitch.cpp  RCSwitch.h  RcOok.cpp  RcOok.h  Sensor.cpp  Sensor.h  core_433.cpp  eventManager.cpp  rfrpi_hwinit.sh  rfrpi_test.cpp  version.h
RPi/LPD/I2CNet/: ApplicationConnectionListener.cpp  ApplicationThread.cpp  BusDevice.cpp  ConsoleLogger.cpp  I2cAddress.cpp  I2cBusEngineImpl.cpp  I2cContext.cpp  I2cEngineImpl.cpp  I2cRequest.cpp  I2cRequestHolder.cpp  I2cResponse.cpp  LoggerFactory.cpp  OptionParser.cpp  PacketSubstitutor.cpp  TcpServerSocket.cpp  TcpSocket.cpp  Utils.cpp  main.cpp  makefile
x86/LMT/MorseCode/: README
(+712 files in other folders)
